--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clonebot-message-bus",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Message Bus module for inter-module communication",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -33,6 +33,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.25.3",
+    "@xenova/transformers": "^2.17.2",
     "form-data": "^4.0.0"
   },
   "optionalDependencies": {
